docotr: pharmacy prescription

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1929,11 +1929,6 @@ a.profilMenu {
         width: 96% !important;
         margin-top: 14px !important;
     }
-    .emrgncyDataUpr {
-        padding-left: 0px !important;
-        padding-top: 0px !important;
-        padding: 30px 24px !important;
-    }
     .docCntctMain {
         min-height: 152px !important;
     }
@@ -2024,9 +2019,9 @@ a.profilMenu {
         margin-top: 26px !important;
         margin-bottom: 16px !important;
     }
-    .apointUpcom {
+    /* .apointUpcom {
         display: none !important;
-    }
+    } */
     .appointArang {
         padding: 0px 18px !important;
     }
@@ -2925,6 +2920,8 @@ a.profilMenu {
     text-align: right;
 }
 .dragDash {
+    position: relative;
+    top: 0;
     padding: 18px 24px 10px 24px;
 }
 .dragDashLft a {
@@ -5615,7 +5612,7 @@ button.presTabsIner {
     border-bottom: 1px solid #F2F2F2;
 }
 .presOpinionIner td.pivoted {
-    padding: 14px 14px;
+    padding: 14px 20px;
     color: #000808;
     font-family: Muli;
     font-size: 13px;
@@ -9263,9 +9260,6 @@ a.menuActv img {
 .findpatient input:-moz-placeholder { 
     color: #BFC1C1;
 }
-.findpatientReq a:first-child {
-    margin-right: 12px;
-}
 .findpatientReq a {
     border: 1px solid #F2F2F2;
     border-radius: 8px;
@@ -11724,13 +11718,13 @@ a.patntListCstm2 {
     line-height: 16px;
     text-align: center;
 }
-.schdulTimCntnt {
+.schdulTimCntnt{
     border-radius: 6px;
     background-color: #FAFAFA;
     padding: 5px 12px;
     margin-bottom: 15px;
 }
-.schdulTimCntnt label {
+.schdulTimCntnt label{
     color: #BFC1C1;
     font-family: Muli;
     font-size: 12px;
@@ -11739,7 +11733,7 @@ a.patntListCstm2 {
     line-height: 14px;
     margin-bottom: 0px;
 }
-.schdulTimCntnt p {
+.schdulTimCntnt p{
     color: #BFC1C1;
     font-family: Muli;
     font-size: 12px;
@@ -12047,10 +12041,7 @@ span.srchMobIcon img {
     text-align: center;
   }
   .journalAdd h1 {
-    margin-bottom: 24px;
-    /* text-align: center; */
-    font-size: 19px;
-    line-height: 25px;
+    font-size: 22px;
   }
   .diagnosImg a {
     padding-right: 5px;
@@ -13127,12 +13118,13 @@ a.academy_ul ul li img {
     height: 200px;
 }
 .image-zoom-settings {
-    max-width: 130px; }
-    .image-zoom-settings__button {
-      display: block;
-      width: 120px;
-      margin-bottom: 5px; }
-  
+    max-width: 130px; 
+}
+.image-zoom-settings__button {
+    display: block;
+    width: 120px;
+    margin-bottom: 5px; 
+}
 .darkTheme > .invtBoxCntnt .invitLinkInfo .css-yk16xz-control {
     border: 1px solid #BFC1C1 !important;
     border-radius: 4px;
@@ -13215,7 +13207,7 @@ a.profilePic2 span,a.profilePic2 img {
     cursor: pointer;
 }
 .neuroSection h3, .officeVstLft h3 {
-    line-break: anywhere;
+    line-break: normal;
 }
 .homeBgDrk .addSpc.conPainGraph span p, .homeBgDrk .addSpc.conPainGraph span {
     color: #BFC1C1 !important;
@@ -13281,8 +13273,10 @@ g.highcharts-axis.highcharts-yaxis text {
     min-height: 100% !important;
 }
 .allTimeSel1.comonSel {
-    background: #fff!important;
-    border: 1px solid #BFC1C1!important;
+    background: #fff !important;
+    border: 1px solid #BFC1C1 !important;
+    margin-bottom: 12px;
+    border-radius: 4px !important;
 }
 .clear_filterRght a img, .trstCloseBtn a img, .toolSearch img, .topicSrch img{
     width: 20px !important;
@@ -13342,7 +13336,7 @@ g.highcharts-axis.highcharts-yaxis text {
     border: none !important;
     border-radius: 0px !important;
 }
-.showDetail img, .openScnd {
+.showDetail img, .openScnd{
     width: 35px;
     height: 33px;
     border-radius: 6px;
@@ -13533,7 +13527,7 @@ ul.insuranceHint3 li {
     color: #fff;
     font-weight: 600;
     border-radius: 10px;
-    }
+}
 span.unread_msg_notifyspan {
     cursor: pointer;
     position: absolute;
@@ -13982,6 +13976,7 @@ a.painAreasTxt {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
+    margin-bottom: 12px;
 }
 /*For LMS*/
 button.CutomStripeButton {
@@ -14233,11 +14228,9 @@ input:focus {
   }
 
   /* added by satish */
-
   .languageBox {
-      margin: 2px 8px 10px 30px ;
+    margin: 22px 28px 15px 44px;
   }
-
   .LanguageBoxMain {
     width: 40% !important;
     background: #fff;
@@ -14250,13 +14243,14 @@ input:focus {
     margin-top: 35px;
     position: absolute !important;
 }
-
 .LanguageBoxMain label{
     margin-left: 10px !important;
-    font-size: 15px;
+    font-size: 13px;
     vertical-align: middle;
 }
-
+.languageBox .col-xl-6 {
+    padding: 0px;
+}
 .languageHead {
     padding: 15px;
     text-align: center;
@@ -14264,37 +14258,32 @@ input:focus {
     font-weight: 500;
     font-size: 18px
   }
-
-  .lng_blank{
+.lng_blank{
     padding-bottom: 15px;
     text-align: center;
     color: #862d2d !important;
     font-weight: 900;
-  }
-
-  .dropbtn {
+ }
+.dropbtn {
     background-color: #4CAF50;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
   }
-  
-  .dropdown-main {
+.dropdown-main {
     position: relative;
     display: inline-block;
     width: 100%;
-  }
-  
-  .dropdown-content {
+}
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
+}  
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -14582,7 +14571,7 @@ label.attached_file a {
 .MenuLeftDrkUpr .profilMenuList li a:hover {
     color: #BFC1C1 !important;
 }
-@media screen and (min-width: 640px) and (max-width: 1200px) {
+@media screen and (min-width: 640px) and (max-width: 1200px){
     .scndOpinionIner td.pivoted {
         padding: 14px 9px !important;
     }
@@ -14857,7 +14846,7 @@ input#graduationYear {
     color: #BFC1C1 !important;
 }
 .homeBgDrk .ant-picker {
-    border-radius: 2px !important;
+    border-radius: 4px !important;
     background: transparent;
     color: #BFC1C1 !important;
     border: 1px solid #BFC1C1 !important;
@@ -15128,7 +15117,7 @@ a.SelectedGender{
     color: #D9DADA !important;
 }
 .darkTheme > div:nth-child(3) .selTimeSlot a, 
-.darkTheme > div:nth-child(3) .suggent-time a {
+.darkTheme > div:nth-child(3) .suggent-time a{
     border: 1px solid #BFC1C1 !important;
     background-color: transparent !important;
     color: #D9DADA !important;
@@ -15139,17 +15128,17 @@ a.SelectedGender{
 }
 .darkTheme > div:nth-child(3) .selTimeSlot a:hover, 
 .darkTheme > div:nth-child(3) .suggent-time a:hover, 
-.darkTheme > div:nth-child(3) .suggent-time a.current_selected {
+.darkTheme > div:nth-child(3) .suggent-time a.current_selected{
     background-color: #00ABAF !important;
 }
-.checkHelth a p {
+.checkHelth a p{
     width: 77%;
     float: right;
     margin-top: 7px;
     margin-bottom: 0px;
     padding-right: 4px;
 }
-.checkHelth span {
+.checkHelth span{
     width: 18%;
     float: left;
 }
@@ -15262,7 +15251,7 @@ a.clsSltCal {
 }
 
 /* Added by Satish for Float arrow */
-.floatArrowUp {
+.floatArrowUp{
     position:fixed;
 	width:50px;
 	height:50px;
@@ -15404,7 +15393,7 @@ td.dotsImgColor.pivoted{
   }
 }
 @media (max-width: 959px){
-.docsOpinRght{
+  .docsOpinRght{
     text-align: left !important;
   }
   .AddEntrynw a{
@@ -15467,4 +15456,112 @@ td.dotsImgColor.pivoted{
 }
 .addBirthSlot .react-date-picker__button{
     padding: 0px 2px;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #ff000000 inset !important;
+}
+.homeBgDrk input:-webkit-autofill,
+.homeBgDrk input:-webkit-autofill:hover, 
+.homeBgDrk input:-webkit-autofill:focus,
+.homeBgDrk textarea:-webkit-autofill,
+.homeBgDrk textarea:-webkit-autofill:hover,
+.homeBgDrk textarea:-webkit-autofill:focus,
+.homeBgDrk select:-webkit-autofill,
+.homeBgDrk select:-webkit-autofill:hover,
+.homeBgDrk select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #BFC1C1 !important;
+  -webkit-box-shadow: 0 0 0px 1000px #ff000000 inset !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+}
+@media screen and (min-width: 641px) and (max-width: 768px){
+  .presOpinionIner td.pivoted{
+     padding: 14px 5px !important;
+   }
+  .docOpinionIner td.pivoted{
+     padding: 14px 9px !important;
+     font-size: 11px !important;
+   }
+}
+@media (max-width: 959px){
+  .presSrch{
+     text-align: left !important;
+   }  
+   .presSrch a{
+     margin-top: 17px !important;
+     margin-bottom: 12px !important;
+   }
+   .showSubject h3{
+     font-size: 13px !important;
+     line-height: 20px !important;
+   }
+   .apointUpcom{
+     min-height: initial !important;
+   }
+   .clear_filterRght{
+     width: 30%;
+     padding-right: 8px;
+     text-align: right;
+   }
+   .clear_filterUpr{
+     padding-top: 12px;
+   }
+   .descpCntntRght, .descpCntntRght2{
+     width: 100% !important;
+     max-width: 100% !important;
+     flex-basis: 100% !important;
+   }
+   .descpCntnt2{
+     display: block !important;
+   }
+   .descpCntntLft2{
+     width: 100% !important;
+     max-width: 100% !important;
+     flex-basis: 100% !important;
+    }
+    .descpCntntLft2 a{
+     width: 130px !important;
+     margin: 0 auto !important;
+     margin-bottom: 18px !important;
+     display: block !important;
+    }
+    .descpCntntLft2 a span{
+     display: inline-block;
+     margin-top: -2px;
+     vertical-align: middle;
+     margin-left: 10px;
+    }
+    .emrgncyDataUpr{
+     padding-left: 0px !important;
+     padding-top: 0px !important;
+     padding: 30px 24px !important;
+    }
+    .journalAdd .MuiGrid-grid-xs-11.MuiGrid-grid-md-11{
+     max-width: 100% !important;
+     flex-basis: 100% !important;
+    }
+    .journalAdd{
+     margin-top: 0px !important;
+     margin-bottom: 15px !important;
+    }
+}
+@media screen and (min-width: 460px) and (max-width: 959px){
+ .srchFilter .ant-picker-range.allTimeSel1.comonSel{
+    width: 98.7% !important;
+  }
+}
+@media (max-width: 459px){
+.srchFilter .ant-picker-range.allTimeSel1.comonSel{
+    width: 98.3% !important;
+  }
+}
+.findpatientReq a{
+    margin-left: 12px;
 }
